WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233944
[CSS Cascade Layers] Unflake and fix web-platform-tests/css/css-cascade/layer-statement-before-import.html
https://bugs.webkit.org/show_bug.cgi?id=233944
Summary
[CSS Cascade Layers] Unflake and fix web-platform-tests/css/css-cascade/layer...
Antti Koivisto
Reported
2021-12-07 11:49:22 PST
Newly imported imported/w3c/web-platform-tests/css/css-cascade/layer-statement-before-import.html is flaky.
Attachments
Patch
(9.44 KB, patch)
2021-12-13 04:56 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-12-13 04:56:40 PST
Created
attachment 446987
[details]
Patch
Antti Koivisto
Comment 2
2021-12-13 04:57:08 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/32029
EWS Watchlist
Comment 3
2021-12-13 04:58:27 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Tim Nguyen (:ntim)
Comment 4
2021-12-13 05:32:16 PST
Comment on
attachment 446987
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=446987&action=review
> LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/layer-statement-before-import.html:170 > + await new Promise(resolve => { > + styleElement.onload = resolve; > + styleElement.onerror = resolve;
Shouldn't we reject on error? ``` await new Promise((resolve, reject) => { styleElement.onload = resolve; styleElement.onerror = reject; }); ``` or alternatively: ``` await new Promise(resolve => { styleElement.onload = resolve; styleElement.onerror = t.unreached_func("Style element should load"); }); ```
Antti Koivisto
Comment 5
2021-12-13 05:44:14 PST
doesn't really matter for this test?
Simon Fraser (smfr)
Comment 6
2021-12-13 08:27:06 PST
Comment on
attachment 446987
[details]
Patch r+ but address Tim's test issue if appropriate.
EWS
Comment 7
2021-12-13 08:51:17 PST
Committed
r286949
(
245174@main
): <
https://commits.webkit.org/245174@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 446987
[details]
.
Radar WebKit Bug Importer
Comment 8
2021-12-13 08:52:22 PST
<
rdar://problem/86414213
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug